Change Joker lastStep to TypeArooa.